--- a/client/modules/scheduling/templates/manage-schedule.html
+++ b/client/modules/scheduling/templates/manage-schedule.html
@@ -1,4 +1,4 @@
-<div class="row content-label"> Give us your details for <time-format slot="scheduling.timeslotDetails.slot" format="scheduling.timeFormat"></time-format> slot</div>
+<div class="row content-label" ng-if="scheduling.timeslotDetails"> Give us your details for <time-format slot="scheduling.timeslotDetails.slot" format="scheduling.timeFormat"></time-format> slot</div>
 <div class="row">
 	<div class="col-md-6">
 		<form role="form" name="manage_schedule_form" novalidate>
