--- a/client/layout/navbar.html
+++ b/client/layout/navbar.html
@@ -12,7 +12,7 @@
 </ul> -->
 
 <!-- Navigation -->
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-inverse fixed-header" role="navigation">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
         <a class="navbar-brand" href="javascript:void(0);">Practical Test</a>
